smaller bugfixes, readme updates, debugs removed

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
     ESPAsyncWebServer-esphome@^3.4.0
     ESP32 BLE Arduino@^2.0.0
     AsyncTCP-esphome@^2.1.4
+    DNSServer
 
 ; Upload-Konfiguration
 upload_speed = 115200
