a bigger refactoring of the project and adding a beacon mode as a default behaviour with name adjustment possibilities

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,12 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
+;   ESP32-C3 Bluetooth Scanner / Beacon - Unified Project
+;
+;   Unterstützt zwei Betriebsmodi:
+;   - BEACON: Stromsparender BLE-Beacon ohne WiFi
+;   - SCANNER: Bluetooth-Scanner mit Web-Interface
+;
+;   Modusauswahl: Boot-Button >3s drücken
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
